--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,11 @@
 
 \maketitle
 
+\begin{frame}{content}
+    \tableofcontents
+\end{frame}
+
+
 \begin{frame}[fragile]
   \frametitle{problem}
 
@@ -40,7 +45,7 @@
 \end{frame}
 
 
-\begin{frame}{switch block}
+\begin{frame}{Abiter PUFs}
     \begin{figure}[ht]
         \centering
         \begin{subfigure}[b]{0.58\textwidth}
@@ -56,7 +61,7 @@
 \end{frame}
 
 
-\begin{frame}{switch block}
+\begin{frame}{Abiter PUFs}
     \begin{figure}
         \centering
         \includegraphics[width=\textwidth]{figures/multiple_switch_blocks.pdf}
@@ -72,18 +77,18 @@
 \end{frame}
 
 
-\begin{frame}{switch block}
+\begin{frame}{Functions}
     \begin{figure}
         \centering
         \includegraphics[width=0.8\textwidth]{figures/2_switch_blocks_paths.pdf}
-        \caption{Schematic of a switch block}
+        \caption{Arbiter PUF paths}
     \end{figure}
 \end{frame}
 
 
 \begin{frame}{table}
 
-  \input{1_bit_table.tex}
+  \input{tables/1_bit_table.tex}
   
 \end{frame}
 
@@ -100,7 +105,7 @@
 
 \begin{frame}{table}
 
-  \input{1_bit_table_delta.tex}
+  \input{tables/1_bit_table_delta.tex}
   
 \end{frame}
 
@@ -108,7 +113,7 @@
 \begin{frame}[fragile]
   \frametitle{truth table}
   
-  \input{2_bit_table.tex}
+  \input{tables/2_bit_table.tex}
   
 \end{frame}
 
