--- a/tables/1_bit_table.tex
+++ b/tables/1_bit_table.tex
@@ -1,5 +1,6 @@
 \begin{table}[ht]
     \centering
+    \caption{4 Boolean functions induced by an arbiter PUF with one switch block.}
     \def\arraystretch{1.2}
     $\begin{tabu}{c|c|c|c}
          \cline{2-3}
