--- a/tables/2_bit_table.tex
+++ b/tables/2_bit_table.tex
@@ -1,6 +1,7 @@
 \begin{table}[ht]
     \centering
-    \label{truth_table_2_bit}
+    \caption{16 functions induced by an arbiter PUF with two switch blocks.}
+    \vspace{-0.5cm}
   \def\arraystretch{1.2}
   \resizebox{\linewidth}{!}{  
     $\begin{tabu}{c|c|c|c|c|c}
