--- a/beamerthemem.sty
+++ b/beamerthemem.sty
@@ -188,9 +188,7 @@
 %}}}
 
 
-
-
-% Extra packakges 
+% Extra packages 
 \usepackage{tabu}
 \usepackage{xcolor}
 \usepackage{amsmath,tabu}
@@ -204,9 +202,3 @@
 \usepackage{amsmath}
 \newcommand*\xor{\mathbin{\oplus}}
 \newcommand*\an{\mathbin{\otimes}}
-
-% Theorem:
-\usepackage{ntheorem}
-% \theoremseparator{:}
-% \newtheorem{hyp}{Hypothesis}
-
