--- a/main.tex
+++ b/main.tex
@@ -515,13 +515,13 @@
     \end{table}  
 \end{frame}
 
-\begin{frame}{hypothesis}
+\begin{frame}{Hypothesis}
     \begin{center}
         \LARGE\textbf{$\mathbf{n}$ XORed arbiter PUFs can induce all $\mathbf{{2^2}^n}$\\$\mathbf{n}$-variable Boolean functions.}
     \end{center}
 \end{frame}
 
-\begin{frame}{hypothesis}
+\begin{frame}{Hypothesis}
     \begin{figure}
         \centering
         \includegraphics[width=0.6\textwidth]{figures/puf_n_xor.pdf}
@@ -531,7 +531,7 @@
 
 \section{Conclusion}
 
-\begin{frame}{future work}
+\begin{frame}{Future Work}
     \begin{figure}
         \centering
         \includegraphics[width=0.6\textwidth]{figures/puf_3_maj.pdf}
@@ -539,29 +539,26 @@
     \end{figure}
 \end{frame}
 
-\begin{frame}{acknowledgements}
-
-    Latex Beamer:
-
-    \begin{center}\url{github.com/matze/mtheme}\end{center}
-
-    Graphics:
-    
-    \begin{center}\url{draw.io}\end{center}
-    
+\begin{frame}{Conclusion}
+    \begin{itemize}[itemsep=1cm]
+        \item Functions induced by arbiter PUFs are \textbf{not uniformly} distributed
+        \item Potential \textbf{weakness} - could be used for targeted attacks
+        \item \textbf{XORing} PUFs can improve the distribution
+    \end{itemize}
 \end{frame}
 
-
-\begin{frame}{acknowledgements}
-    \begin{center}
-        \begin{tabular}{r l}
-            Examiner: & Prof. Dr. Elena Dubrova\\
-            & \\
-            Mentor: & Dr. Felipe Marranghello
-        \end{tabular}
-    \end{center}
+\begin{frame}{Acknowledgements}
+    \begin{itemize}
+        \item Latex Beamer:
+    \end{itemize}
+    \begin{center}\url{github.com/matze/mtheme}\end{center}
+    \begin{itemize}
+        \item Graphics:
+    \end{itemize}    \begin{center}\url{draw.io}\end{center}
 \end{frame}
 
 \plain{}{Questions?}
+
+\plain{}{Prof. Dr. Elena Dubrova\\Dr. Felipe Marranghello}
 
 \end{document}
