Add more captions

--- a/main.tex
+++ b/main.tex
@@ -327,6 +327,7 @@
     \begin{figure}
         \centering
         \includegraphics[width=\textwidth]{figures/dist/distribution_of_1-variable_boolean_functions_induced_by_1_single_puf.png}
+        \caption{All functions are equally probable.}
     \end{figure}
 \end{frame}
 
@@ -334,6 +335,7 @@
     \begin{figure}
         \centering
         \includegraphics[width=\textwidth]{figures/dist/distribution_of_2-variable_boolean_functions_induced_by_1_single_puf.png}
+        \caption{$x_1$ and $\overline{x_1}$ are not induced (100,000 trials).}
     \end{figure}
 \end{frame}
 
@@ -341,6 +343,7 @@
     \begin{figure}
         \centering
         \includegraphics[width=\textwidth]{figures/dist/distribution_of_3-variable_boolean_functions_induced_by_1_single_puf.png}
+        \caption{152 functions are not induced (1 million trials).}
     \end{figure}
 \end{frame}
 
@@ -348,6 +351,30 @@
     \begin{figure}
         \centering
         \includegraphics[width=\textwidth]{figures/dist/distribution_of_4-variable_boolean_functions_induced_by_1_single_puf.png}
+        \caption{63,654 functions are not induced (10 million trials).}
+    \end{figure}
+\end{frame}
+
+\section{Coverage}
+
+\begin{frame}{Single Arbiter PUF}
+    \begin{figure}
+        \centering
+        \includegraphics[width=\textwidth]{figures/sorted/distribution_of_2-variable_boolean_functions_induced_by_1_single_puf.png}
+    \end{figure}
+\end{frame}
+
+\begin{frame}{Single Arbiter PUF}
+    \begin{figure}
+        \centering
+        \includegraphics[width=\textwidth]{figures/sorted/distribution_of_3-variable_boolean_functions_induced_by_1_single_puf.png}
+    \end{figure}
+\end{frame}
+
+\begin{frame}{Single Arbiter PUF}
+    \begin{figure}
+        \centering
+        \includegraphics[width=\textwidth]{figures/zoom/distribution_of_4-variable_boolean_functions_induced_by_1_single_puf_zoom.png}
     \end{figure}
 \end{frame}
 
@@ -367,6 +394,7 @@
     \begin{figure}
         \centering
         \includegraphics[width=\textwidth]{figures/dist/distribution_of_1-variable_boolean_functions_induced_by_2_xored_pufs.png}
+        \caption{All functions are equally probable.}
     \end{figure}
 \end{frame}
 
@@ -374,6 +402,7 @@
     \begin{figure}
         \centering
         \includegraphics[width=\textwidth]{figures/dist/distribution_of_2-variable_boolean_functions_induced_by_2_xored_pufs.png}
+        \caption{All functions are induced (100,000 trials).}
     \end{figure}
 \end{frame}
 
@@ -381,6 +410,7 @@
     \begin{figure}
         \centering
         \includegraphics[width=\textwidth]{figures/dist/distribution_of_3-variable_boolean_functions_induced_by_2_xored_pufs.png}
+        \caption{All functions excl. $x_1 \xor x_2$ and $\overline{x_1 \xor x_2}$ are induced (1 million trials).}
     \end{figure}
 \end{frame}
 
@@ -388,6 +418,30 @@
     \begin{figure}
         \centering
         \includegraphics[width=\textwidth]{figures/dist/distribution_of_4-variable_boolean_functions_induced_by_2_xored_pufs.png}
+        \caption{11,226 functions are not induced (100 million trials).}
+    \end{figure}
+\end{frame}
+
+\section{Coverage}
+
+\begin{frame}{Two XORed PUFs}
+    \begin{figure}
+        \centering
+        \includegraphics[width=\textwidth]{figures/sorted/distribution_of_2-variable_boolean_functions_induced_by_2_xored_pufs.png}
+    \end{figure}
+\end{frame}
+
+\begin{frame}{Two XORed PUFs}
+    \begin{figure}
+        \centering
+        \includegraphics[width=\textwidth]{figures/sorted/distribution_of_3-variable_boolean_functions_induced_by_2_xored_pufs.png}
+    \end{figure}
+\end{frame}
+
+\begin{frame}{Two XORed PUFs}
+    \begin{figure}
+        \centering
+        \includegraphics[width=\textwidth]{figures/zoom/distribution_of_4-variable_boolean_functions_induced_by_2_xored_pufs_zoom.png}
     \end{figure}
 \end{frame}
 
@@ -407,6 +461,7 @@
     \begin{figure}
         \centering
         \includegraphics[width=\textwidth]{figures/dist/distribution_of_1-variable_boolean_functions_induced_by_3_xored_pufs.png}
+        \caption{All functions are equally probable}
     \end{figure}
 \end{frame}
 
@@ -414,6 +469,7 @@
     \begin{figure}
         \centering
         \includegraphics[width=\textwidth]{figures/dist/distribution_of_2-variable_boolean_functions_induced_by_3_xored_pufs.png}
+        \caption{All functions are induced (100,000 trials).}
     \end{figure}
 \end{frame}
 
@@ -421,6 +477,7 @@
     \begin{figure}
         \centering
         \includegraphics[width=\textwidth]{figures/dist/distribution_of_3-variable_boolean_functions_induced_by_3_xored_pufs.png}
+        \caption{All functions are induced (1.5 million trials).}
     \end{figure}
 \end{frame}
 
@@ -428,6 +485,30 @@
     \begin{figure}
         \centering
         \includegraphics[width=\textwidth]{figures/dist/distribution_of_4-variable_boolean_functions_induced_by_3_xored_pufs.png}
+        \caption{All functions excl. $x_1 \xor x_3$ and $\overline{x_1 \xor x_3}$ are induced (2 billion trials).}
+    \end{figure}
+\end{frame}
+
+\section{Coverage}
+
+\begin{frame}{Three XORed PUFs}
+    \begin{figure}
+        \centering
+        \includegraphics[width=\textwidth]{figures/sorted/distribution_of_2-variable_boolean_functions_induced_by_3_xored_pufs.png}
+    \end{figure}
+\end{frame}
+
+\begin{frame}{Three XORed PUFs}
+    \begin{figure}
+        \centering
+        \includegraphics[width=\textwidth]{figures/sorted/distribution_of_3-variable_boolean_functions_induced_by_3_xored_pufs.png}
+    \end{figure}
+\end{frame}
+
+\begin{frame}{Three XORed PUFs}
+    \begin{figure}
+        \centering
+        \includegraphics[width=\textwidth]{figures/zoom/distribution_of_4-variable_boolean_functions_induced_by_3_xored_pufs_zoom.png}
     \end{figure}
 \end{frame}
 
@@ -468,7 +549,7 @@
             4         & 0         \\ \hline
             16        & 0         \\ \hline
             256       & 2         \\ \hline
-            65,536    & 11,352    \\ \hline
+            65,536    & 11,226    \\ \hline
             \vdots    & \vdots    \\ \hline
             ${2^2}^n$ & ???       \\ \hline
             \end{tabular}
