--- a/main.tex
+++ b/main.tex
@@ -47,10 +47,14 @@
 \end{frame}
 
 \begin{frame}{Today}
-    TODO TODO TODO
-    \begin{itemize}[itemsep=0.5cm]
-        \item \textbf{Problem} - Why should you care?
+    \begin{itemize}[itemsep=0.25cm]
+        \item \textbf{Motivation} - Why should you care?
+        \item \textbf{Background} - What do I need to know?
         \item \textbf{Arbiter PUFs} - What are they?
+        \item \textbf{Example} - How does it work?
+        \item \textbf{Proof of Conflict} - What's the problem?
+        \item \textbf{Solution} - How do we fix it?
+        \item \textbf{Simulation} - What did we do?
         \item \textbf{Results} - What did we find?
         \item \textbf{Summary} - In short?
         \item \textbf{Conclusion} - And what?
@@ -84,7 +88,7 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Problem}
+\begin{frame}{Motivation}
     \begin{figure}
         \centering
         \includegraphics[width=0.7\textwidth]{figures/fpga.jpeg}
