Improve table of content

--- a/main.tex
+++ b/main.tex
@@ -47,18 +47,22 @@
 \end{frame}
 
 \begin{frame}{Today}
-    \begin{itemize}[itemsep=0.25cm]
-        \item \textbf{Motivation} - Why should you care?
-        \item \textbf{Background} - What do I need to know?
-        \item \textbf{Arbiter PUFs} - What are they?
-        \item \textbf{Example} - How does it work?
-        \item \textbf{Proof of Conflict} - What's the problem?
-        \item \textbf{Solution} - How do we fix it?
-        \item \textbf{Simulation} - What did we do?
-        \item \textbf{Results} - What did we find?
-        \item \textbf{Summary} - In short?
-        \item \textbf{Conclusion} - And what?
-    \end{itemize}
+    \begin{table}[]
+        \def\arraystretch{1.2}
+        \raggedright
+            \begin{tabular}{r c l}
+            \textbf{Motivation} &-& Why should you care?\\
+            \textbf{Background} &-& What do you need to know?\\
+            \textbf{Arbiter PUFs} &-& What are they?\\
+            \textbf{Example} &-& How does it work?\\
+            \textbf{Proof of Conflict} &-& What's the problem?\\
+            \textbf{Solution} &-& How do we fix it?\\
+            \textbf{Simulation} &-& What did we do?\\
+            \textbf{Results} &-& What did we find?\\
+            \textbf{Summary} &-& In short?\\
+            \textbf{Conclusion} &-& And what?
+        \end{tabular}
+    \end{table}
 \end{frame}
 
 \section{Motivation}
