--- a/main.tex
+++ b/main.tex
@@ -129,7 +129,7 @@
     \end{itemize}
 \end{frame}
 
-\section{Abiter PUFs} % yes or no?
+\section{Arbiter PUFs} % yes or no?
 
 \begin{frame}{Switch Block}
     \begin{figure}
